--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
                             financial
                             track record, NVIDIA remains a top choice for savvy investors.</p>
                         <div class="d-flex justify-content-lg-start justify-content-center"><button id="openPopup"
-                                class="readbtn mt-md-4 mt-3 c-black-100 ff_opensans lh_xsm fw-bold fs_xs">Read
+                                class="main-button mt-md-4 mt-3 c-black-100 ff_opensans lh_xsm fw-bold fs_xs">Read
                                 more</button>
                         </div>
 
@@ -818,7 +818,7 @@
                             enterprise software, Azure cloud computing, and innovation make it an attractive investment.
                         </p>
                         <div class="d-flex justify-content-lg-start justify-content-center"><button id="openPopup2"
-                                class="readbtn mt-md-4 mt-3 c-black-100 ff_opensans lh_xsm fw-bold fs_xs">Read
+                                class="main-button mt-md-4 mt-3 c-black-100 ff_opensans lh_xsm fw-bold fs_xs">Read
                                 more</button>
                         </div>
 
@@ -845,7 +845,7 @@
                             technological
                             prowess, Amazon remains a top choice for investors</p>
                         <div class="d-flex justify-content-lg-start justify-content-center"><button id="openPopup3"
-                                class="readbtn mt-md-4 mt-3 c-black-100 ff_opensans lh_xsm fw-bold fs_xs">Read
+                                class="main-button mt-md-4 mt-3 c-black-100 ff_opensans lh_xsm fw-bold fs_xs">Read
                                 more</button>
                         </div>
 
@@ -1036,7 +1036,7 @@
                             enterprise software, Azure cloud computing, and innovation make it an attractive investment.
                         </p>
                         <div class="d-flex justify-content-lg-start justify-content-center"><button id="openPopup4"
-                                class="readbtn mt-md-4 mt-3 c-black-100 ff_opensans lh_xsm fw-bold fs_xs">Read
+                                class="main-button mt-md-4 mt-3 c-black-100 ff_opensans lh_xsm fw-bold fs_xs">Read
                                 more</button>
                         </div>
 
@@ -1067,7 +1067,7 @@
                             unparalleled
                             growth potential and technological excellence.</p>
                         <div class="d-flex justify-content-lg-start justify-content-center"><button id="openPopup5"
-                                class="readbtn mt-md-4 mt-3 c-black-100 ff_opensans lh_xsm fw-bold fs_xs">Read
+                                class="main-button mt-md-4 mt-3 c-black-100 ff_opensans lh_xsm fw-bold fs_xs">Read
                                 more</button>
                         </div>
                         <div id="popup5" class="popup">
@@ -1199,7 +1199,7 @@
                             opportunity
                             for investors seeking growth and innovation in the AI stock sector.</p>
                         <div class="d-flex justify-content-lg-start justify-content-center"><button id="openPopup6"
-                                class="readbtn mt-md-4 mt-3 c-black-100 ff_opensans lh_xsm fw-bold fs_xs">Read
+                                class="main-button mt-md-4 mt-3 c-black-100 ff_opensans lh_xsm fw-bold fs_xs">Read
                                 more</button>
                         </div>
 
@@ -1294,7 +1294,7 @@
                             opportunity to
                             capitalize on the evolution of networking in the AI stock market.</p>
                         <div class="d-flex justify-content-lg-start justify-content-center"><button id="openPopup7"
-                                class="readbtn mt-md-4 mt-3 c-black-100 ff_opensans lh_xsm fw-bold fs_xs">Read
+                                class="main-button mt-md-4 mt-3 c-black-100 ff_opensans lh_xsm fw-bold fs_xs">Read
                                 more</button>
                         </div>
 
