--- a/index.html
+++ b/index.html
@@ -1405,7 +1405,7 @@
                         Stocks, Forex, Indices and more
                     </p>
                     <div
-                        class="trade_shares d-flex flex-column justify-content-center align-items-center align-items-md-start gap-3 pt-3 mt-1 pb-md-4 trade_timeline mx-auto position-relative">
+                        class="trade_shares d-flex flex-column justify-content-center align-items-center align-items-md-start gap-3 pt-3 mt-1 pb-md-4 trade_timeline position-relative">
                         <div data-title="company"
                             class="d-flex align-items-center gap-lg-5 gap-3 trade_line_first position-relative">
                             <span onclick="changeImageHandler('company')"
