--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
             </div>
         </section>
         <!--------------------------------------------------- uderstanding-section --------------------------------------------------->
-        <section class=" pt-md-5 mt_10 mw_1920">
+        <section class=" pt-md-5 mt_10 mw_1920 overflow-x-clip">
             <div class="container mw_1200 pt-lg-5 mt-1">
                 <h2
                     class="mw_94  pt-4 ff_opensans px-md-0 px-sm-3  fw-bold lh_7xl mb-3 fs_8xl text-white text-center mx-auto">
@@ -582,7 +582,7 @@
             </div>
         </section>
         <!--============================top-section============================= -->
-        <section class="position-relative z-3 overflow-x-clip pt-md--5 pt-sm-3 mt-5 ">
+        <section class="position-relative z-3 overflow-x-clip pt-md--5 pt-sm-3 mt-5 overflow-x-clip ">
             <div class="nividia-topellipse d-lg-block d-none"></div>
             <div class="nividia-bottomellipse"></div>
             <div class="microsoft-ellipse d-md-block d-none"></div>
@@ -1392,7 +1392,7 @@
     </div>
     </section>
     <!--==================Trade-long-section===================-->
-    <section class="pt-lg-5 pt-md-4 mt-5">
+    <section class="pt-lg-5 pt-md-4 mt-5 overflow-x-clip">
         <div class="custom_container container px-4 travel_section_padding pt-xl-5">
             <div
                 class="row align-items-center justify-content-md-between justify-content-center flex-wrap-reverse ai_blue">
@@ -1460,7 +1460,7 @@
         </div>
     </section>
     <!--============Statistics-For-Today================ -->
-    <section class="pt_Statistics position-relative z-1 mw_1920">
+    <section class="pt_Statistics position-relative z-1 mw_1920 overflow-x-clip">
         <div class="Statistics_ellips2 d-none d-md-block"></div>
         <div class="container mw_1164">
             <h2 class="text-white ff_opensans fw-bold fs_8xl lh_7xl text-center mb-sm-4 mb-lg-5"><span
@@ -1520,7 +1520,7 @@
         </div>
     </section>
     <!--============Average-Earnings============== -->
-    <section class="py_average position-relative z-1 mw_1920">
+    <section class="py_average position-relative z-1 mw_1920 overflow-x-clip">
         <div class="Statistics_ellips1 d-none d-xl-block"></div>
         <div class="Statistics_ellips3  d-none d-xl-block"></div>
         <div class=" d-flex flex-md-row flex-column align-items-center average_gap  pe-md-3 pe-lg-4 pe-xl-5">
@@ -1653,7 +1653,7 @@
         </div>
     </section>
     <!-- faq -->
-    <section class="position-relative z-1 mw_1920">
+    <section class="position-relative z-1 mw_1920 overflow-x-clip">
         <span class="FaqLeftEllips d-block">
         </span>
         <span class="FaqRightEllips d-block">
@@ -1757,7 +1757,7 @@
         </div>
     </section>
     <!--------------------------------------------------- benifit-section --------------------------------------------------->
-    <section class="position-relative pt-3 mw_1920">
+    <section class="position-relative pt-3 mw_1920 overflow-x-clip">
         <span class="ellipse_1 position-absolute"></span>
         <span class="ellipse_2 position-absolute"></span>
         <span class="ellipse_3 position-absolute"></span>
@@ -1934,7 +1934,7 @@
         </div>
     </section>
     <!-- Trading-section -->
-    <div class="py-5 position-relative z-1 mw_1920">
+    <div class="py-5 position-relative z-1 mw_1920 overflow-x-clip">
         <span class="d-block Ai_stackLeftEllips"></span>
         <span class="d-block Ai_stackRightEllips"></span>
         <div class="py-lg-5 my-1 container">
@@ -1997,7 +1997,7 @@
         </div>
     </div>
     <!-- footer -->
-    <footer class="mt-md-5 pt-lg-5 position-relative z-1 mw_1920">
+    <footer class="mt-md-5 pt-lg-5 position-relative z-1 mw_1920 overflow-x-clip">
         <span class="footerLeft d-block"></span>
         <span class="footerRight d-block"></span>
         <div class="container pt-lg-5">
