--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
             </div>
         </section>
         <!--============================top-section============================= -->
-        <section class="position-relative z-3 overflow-x-clip pt-md--5 pt-sm-3 mt-5 overflow-x-clip ">
+        <section class="position-relative z-3 me_1920 overflow-x-clip pt-md--5 pt-sm-3 mt-5 overflow-x-clip ">
             <div class="nividia-topellipse d-lg-block d-none"></div>
             <div class="nividia-bottomellipse"></div>
             <div class="microsoft-ellipse d-md-block d-none"></div>
