--- a/index3.html
+++ b/index3.html
@@ -407,7 +407,7 @@
         </div>
     </section>
     <!--=====================track-section====================-->
-    <section class="pt-5 ">
+    <section class="pt-5 overflow-x-clip mw_1920">
         <div class="custom_container container px-4 travel_section_padding pt-xl-5 mt-lg-5">
             <div
                 class="row align-items-center justify-content-md-between justify-content-center flex-wrap-reverse ai_blue">
@@ -474,7 +474,7 @@
         </div>
     </section>
     <!--------------------------------------------------- uderstanding-section --------------------------------------------------->
-    <section class="pt-md-5 mt_10 mw_1920">
+    <section class="pt-md-5 mt_10 mw_1920 overflow-x-clip">
         <div class="container mw_1100 pt-lg-5 mt-1">
             <h2
                 class="mw_94 pt-4 ff_opensans px-md-0 px-sm-3 fw-bold lh_7xl mb-3 fs_8xl text-white text-center mx-auto">
@@ -901,7 +901,7 @@
         </div>
     </section>
     <!-- benifit -->
-    <section class="position-relative pt-3 overflow-hidden">
+    <section class="position-relative pt-3 mw_1920 overflow-x-clip">
         <span class="ellipse_1_2 position-absolute"></span>
         <span class="ellipse_2_2 position-absolute"></span>
         <span class="ellipse_3_2 position-absolute"></span>
@@ -1150,7 +1150,7 @@
         </div>
     </section>
     <!-- Trading-section -->
-    <div class="py-5 position-relative z-1 mw_1920">
+    <div class="py-5 position-relative z-1 mw_1920 overflow-x-clip">
         <span class="d-block Ai_stackLeftEllipsAI"></span>
         <span class="d-block Ai_stackRightEllipsAI"></span>
         <div class="py-lg-5 my-1 container">
@@ -1212,7 +1212,7 @@
         </div>
     </div>
     <!-- footer -->
-    <footer class="mt-md-5 pt-xl-5 position-relative z-1 mw_1920">
+    <footer class="mt-md-5 pt-xl-5 position-relative z-1 mw_1920 overflow-x-clip">
         <span class="AIfooterLeft d-block"></span>
         <div class="container pt-xl-5">
             <div
