--- a/index18.html
+++ b/index18.html
@@ -29,14 +29,14 @@
       <h3 class="lh_7xl text_gradient2 pb-5 mb-4 fs_8xl ff_opensans text-center fw-bold">
         AI Stocks
       </h3>
-      <div class="gradient-leftline"></div>
-      <div class="gradient-rightline"></div>
+      <div class="pink-gradient-leftline"></div>
+      <div class="pink-gradient-rightline"></div>
     </div>
     <div class="container bg-black">
 
 
       <div class="row align-items-center pt-2 flex-lg-row flex-column-reverse justify-content-between pt-5">
-        <div class="col-lg-6 pt-lg-0 pt-5 mt-lg-0 mt-5">
+        <div class="col-lg-6  mt-lg-0 mt-5">
           <h2 class="white text-lg-start text-center fw-normal mb-0 fs_6lg">Nvidia - AI GPU </br><span
               class="text_gradient2">1 year 228%
             </span>Growth
@@ -54,11 +54,11 @@
 
         </div>
         <div class="col-lg-6 d-flex  justify-content-lg-start justify-content-center">
-          <div class=" position-relative z-3 ps-xl-5 ms-xl-3 d-flex ">
+          <div class=" position-relative z-3 ps-xl-5 ms-xl-3 d-flex  ">
             <div class="white_bg_box">
               <img src="./assets//images/svg/stock-1-nividia.svg" alt="logo" class="w-100">
             </div>
-            <div class="stock_bubble-right linear_bg stock_bubble-right_bg"></div>
+            <div class="right-pink-box"></div>
             <div class="stock_rate_right">
               <div class=" blur_btn  gap-3 d-flex align-items-center">
                 <span><img src="./assets/images/svg/pink-arrow.svg" alt="rate-arrow" class="rate-arrow">
@@ -132,7 +132,7 @@
             <div class="white_bg_box stock-2">
               <img src="./assets//images/svg/stock-2.svg" alt="logo2" class="w-100">
             </div>
-            <div class="stock_bubble-left linear_bg stock_bubble-right_bg"></div>
+            <div class="left-pink-box"></div>
             <div class="stock_rate_left">
               <div class=" blur_btn  gap-3 d-flex align-items-center">
                 <p class="ff_opensans fw-bold fs_8md lh_3xl text_gradient2 mb-0 ">1 year 64%</p> <span><img
@@ -195,7 +195,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6 pt-5 mt-5">
+        <div class="col-lg-6 pt-5 mt-lg-5">
           <h2 class="white text-lg-start text-center fw-normal mb-0 fs_6lg">Microsoft - Co-pilot
             </br><span class="text_gradient2">1 year 64%
             </span>Growth
@@ -213,7 +213,7 @@
 
       <!-- ======third====== -->
       <div class="row align-items-center flex-lg-row pt-5 mt-md-5  flex-column-reverse justify-content-between pt-5">
-        <div class="col-lg-6 pt-5 mt-5">
+        <div class="col-lg-6 pt-lg-5 mt-5">
           <h2 class="white text-lg-start text-center fw-normal mb-0 fs_6lg">Amazon AWS - AI
               </br><span class="text_gradient2">1 year 69%
             </span>Growth
@@ -233,7 +233,7 @@
             <div class="white_bg_box stock-3">
               <img src="./assets//images/svg/stock-3.svg" alt="logo3" class="w-100">
             </div>
-            <div class="stock_bubble-right linear_bg stock_bubble-right_bg"></div>
+            <div class="right-pink-box"></div>
             <div class="stock_rate_right">
               <div class=" blur_btn  gap-3 d-flex align-items-center">
                 <span><img src="./assets/images/svg/pink-arrow.svg" alt="rate-arrow" class="rate-arrow">
@@ -304,7 +304,7 @@
             <div class="white_bg_box stock-4">
               <img src="./assets//images/svg/stock-4.svg" alt="logo4" class="w-100">
             </div>
-            <div class="stock_bubble-left linear_bg stock_bubble-right_bg"></div>
+            <div class="left-pink-box"></div>
             <div class="stock_rate_left ">
               <div class=" blur_btn  gap-3 d-flex align-items-center">
                 <p class="ff_opensans fw-bold fs_8md lh_3xl text_gradient2 mb-0 ">1 year 157%</p> <span><img
@@ -368,7 +368,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6 pt-5 mt-5">
+        <div class="col-lg-6 pt-lg-5 mt-5">
           <h2 class="white text-lg-start text-center fw-normal mb-0 fs_6lg">Palantir - AI Analytics
 
             </br><span class="text_gradient2">1 year 157%
@@ -387,7 +387,7 @@
 
       <!-- =====fifth===== -->
       <div class="row align-items-center flex-lg-row pt-5 mt-md-5  flex-column-reverse justify-content-between pt-5">
-        <div class="col-lg-6 pt-lg-5 pt-3 mt-5">
+        <div class="col-lg-6 pt-5 mt-lg-5">
           <h2 class="white text-lg-start text-center fw-normal mb-0 fs_6lg">Crowd strike - Cyber
 
               </br><span class="text_gradient2">1 year 156%
@@ -462,7 +462,7 @@
             <div class="white_bg_box stock-5">
               <img src="./assets//images/svg/stock-5.svg" alt="logo5" class="w-100">
             </div>
-            <div class="stock_bubble-right linear_bg stock_bubble-right_bg"></div>
+            <div class="right-pink-box"></div>
             <div class="stock_rate_right">
               <div class=" blur_btn  gap-3 d-flex align-items-center">
                 <span><img src="./assets/images/svg/pink-arrow.svg" alt="rate-arrow" class="rate-arrow">
@@ -483,7 +483,7 @@
             <div class="white_bg_box stock-6">
               <img src="./assets//images/svg/stock-6.svg" alt="logo6" class="w-100">
             </div>
-            <div class="stock_bubble-left linear_bg stock_bubble-right_bg"></div>
+            <div class="left-pink-box"></div>
             <div class="stock_rate_left ">
               <div class=" blur_btn  gap-3 d-flex align-items-center">
                 <p class="ff_opensans fw-bold fs_8md lh_3xl text_gradient2 mb-0 ">1 year 82%</p> <span><img
@@ -587,7 +587,7 @@
             <div class="white_bg_box stock-7">
               <img src="./assets//images/svg/stock-7.svg" alt="logo7" class="w-100">
             </div>
-            <div class="stock_bubble-right linear_bg stock_bubble-right_bg"></div>
+            <div class="right-pink-box"></div>
             <div class="stock_rate_right">
               <div class=" blur_btn  gap-3 d-flex align-items-center">
                 <span><img src="./assets/images/svg/pink-arrow.svg" alt="rate-arrow" class="rate-arrow">
