--- a/index.html
+++ b/index.html
@@ -1997,7 +1997,7 @@
         </div>
     </div>
     <!-- footer -->
-    <footer class="mt-md-5 pt-lg-5 position-relative z-1 mw_1920 overflow-x-clip">
+    <footer class="mt-xl-5 pt-lg-5 position-relative z-1 mw_1920 overflow-x-clip">
         <span class="footerLeft d-block"></span>
         <span class="footerRight d-block"></span>
         <div class="container pt-lg-5">
