--- a/index11.html
+++ b/index11.html
@@ -387,7 +387,7 @@
 
       <!-- =====fifth===== -->
       <div class="row align-items-center flex-lg-row pt-5 mt-md-5  flex-column-reverse justify-content-between pt-5">
-        <div class="col-lg-6 pt-lg-5 pt-3 mt-5">
+        <div class="col-lg-6 pt-5 mt-5">
           <h2 class="white text-lg-start text-center fw-normal mb-0 fs_6lg">Crowd strike - Cyber
 
               </br><span class="font-gradient">1 year 156%
@@ -494,7 +494,7 @@
           </div>
 
         </div>
-        <div class="col-lg-6 pt-lg-5 mt-5">
+        <div class="col-lg-6 pt-5 mt-5">
           <h2 class="white text-lg-start text-center fw-normal mb-0 fs_6lg">UI Path - Robotic Automations
              
             </br><span class="font-gradient">1 year 82%
@@ -566,7 +566,7 @@
 
       <!-- ======seventh======== -->
       <div class="row align-items-center flex-lg-row pt-md-5 mt-md-5  flex-column-reverse justify-content-between pt-5">
-        <div class="col-lg-6 pt-lg-5 pt-3 mt-5">
+        <div class="col-lg-6 pt-5 mt-5">
           <h2 class="white text-lg-start text-center fw-normal mb-0 fs_6lg">Arista Networks - </br>
             AI Cloud Computing
               </br><span class="font-gradient">1 year 111% 
