--- a/index18.html
+++ b/index18.html
@@ -13,15 +13,15 @@
 
 <body>
   <section class="bg-black position-relative z-3 overflow-x-clip">
-    <div class="nividia-topellipse d-lg-block d-none"></div>
-    <div class="nividia-bottomellipse"></div>
-    <div class="microsoft-ellipse d-md-block d-none"></div>
-    <div class="aws-ellipse"></div>
-    <div class="plantir-ellipse"></div>
-    <div class="ui-ellipse2"></div>
-    <div class="crowd-ellipse"></div>
-    <div class="ui-ellipse"></div>
-    <div class="arista-ellipse2"></div>
+    <div class="nividia-pink-topellipse d-lg-block d-none"></div>
+    <div class="nividia-pink-bottomellipse"></div>
+    <div class="microsoft-pink-ellipse d-md-block d-none"></div>
+    <div class="aws-pink-ellipse"></div>
+    <div class="plantir-pink-ellipse"></div>
+    <div class="ui-pink-ellipse2"></div>
+    <div class="crowd-pink-ellipse"></div>
+    <div class="ui-pink-ellipse"></div>
+    <div class="arista-pink-ellipse2"></div>
     <div class="position-relative z-1">
       <h2 class="white fs_2xxl fw-bold lh_11xl text-center ff_opensans">
         Top 7
@@ -60,7 +60,7 @@
             </div>
             <div class="right-pink-box"></div>
             <div class="stock_rate_right">
-              <div class=" blur_btn  gap-3 d-flex align-items-center">
+              <div class=" blur_pink_btn  gap-3 d-flex align-items-center">
                 <span><img src="./assets/images/svg/pink-arrow.svg" alt="rate-arrow" class="rate-arrow">
                 </span>
                 <p class="ff_opensans fw-bold fs_8md lh_3xl text_gradient2 mb-0 ">1 year 228%</p>
@@ -70,8 +70,8 @@
 
           <div id="popup" class="popup">
             <div class=" z-3 bgpopup overflow-x-clip position-relative">
-              <div class="popup-topright-ellipse "></div>
-              <div class="popup-bottomleft-ellipse"></div>
+              <div class="popup-pink-topright-ellipse "></div>
+              <div class="popup-pink-bottomleft-ellipse"></div>
               <span class="close" id="closePopup"><img src="./assets/images/svg/cross-btn.svg"
                   alt="popup-cross-btn"></span>
               <div class="row align-items-center justify-content-center">
@@ -134,7 +134,7 @@
             </div>
             <div class="left-pink-box"></div>
             <div class="stock_rate_left">
-              <div class=" blur_btn  gap-3 d-flex align-items-center">
+              <div class=" blur_pink_btn  gap-3 d-flex align-items-center">
                 <p class="ff_opensans fw-bold fs_8md lh_3xl text_gradient2 mb-0 ">1 year 64%</p> <span><img
                     src="./assets//images/svg/pink-arrow.svg" alt="rate-arrow" class="rate-arrow">
                 </span>
@@ -144,8 +144,8 @@
 
           <div id="popup2" class="popup">
             <div class=" z-3 bgpopup overflow-x-clip position-relative">
-              <div class="popup-topright-ellipse "></div>
-              <div class="popup-bottomleft-ellipse"></div>
+              <div class="popup-pink-topright-ellipse "></div>
+              <div class="popup-pink-bottomleft-ellipse"></div>
               <span class="close" id="closePopup2"><img src="./assets/images/svg/cross-btn.svg"
                   alt="popup-cross-btn"></span>
               <div class="row align-items-center justify-content-center">
@@ -235,7 +235,7 @@
             </div>
             <div class="right-pink-box"></div>
             <div class="stock_rate_right">
-              <div class=" blur_btn  gap-3 d-flex align-items-center">
+              <div class=" blur_pink_btn  gap-3 d-flex align-items-center">
                 <span><img src="./assets/images/svg/pink-arrow.svg" alt="rate-arrow" class="rate-arrow">
                 </span>
                 <p class="ff_opensans fw-bold fs_8md lh_3xl text_gradient2 mb-0 ">1 year 69%</p>
@@ -245,8 +245,8 @@
 
           <div id="popup3" class="popup">
             <div class="popup-content z-3 bgpopup overflow-x-clip position-relative">
-              <div class="popup-topright-ellipse "></div>
-              <div class="popup-bottomleft-ellipse"></div>
+              <div class="popup-pink-topright-ellipse "></div>
+              <div class="popup-pink-bottomleft-ellipse"></div>
               <span class="close" id="closePopup3"><img src="./assets/images/svg/cross-btn.svg"
                   alt="popup-cross-btn"></span>
               <div class="row align-items-center justify-content-center">
@@ -306,7 +306,7 @@
             </div>
             <div class="left-pink-box"></div>
             <div class="stock_rate_left ">
-              <div class=" blur_btn  gap-3 d-flex align-items-center">
+              <div class=" blur_pink_btn  gap-3 d-flex align-items-center">
                 <p class="ff_opensans fw-bold fs_8md lh_3xl text_gradient2 mb-0 ">1 year 157%</p> <span><img
                     src="./assets//images/svg/pink-arrow.svg" alt="rate-arrow" class="rate-arrow">
                 </span>
@@ -316,8 +316,8 @@
 
           <div id="popup4" class="popup">
             <div class=" z-3 bgpopup overflow-x-clip position-relative">
-              <div class="popup-topright-ellipse "></div>
-              <div class="popup-bottomleft-ellipse"></div>
+              <div class="popup-pink-topright-ellipse "></div>
+              <div class="popup-pink-bottomleft-ellipse"></div>
               <span class="close" id="closePopup4"><img src="./assets/images/svg/cross-btn.svg"
                   alt="popup-cross-btn"></span>
               <div class="row align-items-center justify-content-center">
@@ -404,8 +404,8 @@
               class="readbtn mt-md-4 mt-3 white ff_opensans lh_xsm fw-bold fs_xs">Read more</button></div>
           <div id="popup5" class="popup">
             <div class=" z-3 bgpopup overflow-x-clip position-relative">
-              <div class="popup-topright-ellipse "></div>
-              <div class="popup-bottomleft-ellipse"></div>
+              <div class="popup-pink-topright-ellipse "></div>
+              <div class="popup-pink-bottomleft-ellipse"></div>
               <span class="close" id="closePopup5"><img src="./assets/images/svg/cross-btn.svg"
                   alt="popup-cross-btn"></span>
               <div class="row align-items-center justify-content-center">
@@ -464,7 +464,7 @@
             </div>
             <div class="right-pink-box"></div>
             <div class="stock_rate_right">
-              <div class=" blur_btn  gap-3 d-flex align-items-center">
+              <div class=" blur_pink_btn  gap-3 d-flex align-items-center">
                 <span><img src="./assets/images/svg/pink-arrow.svg" alt="rate-arrow" class="rate-arrow">
                 </span>
                 <p class="ff_opensans fw-bold fs_8md lh_3xl text_gradient2 mb-0 ">1 year 156%</p>
@@ -485,7 +485,7 @@
             </div>
             <div class="left-pink-box"></div>
             <div class="stock_rate_left ">
-              <div class=" blur_btn  gap-3 d-flex align-items-center">
+              <div class=" blur_pink_btn  gap-3 d-flex align-items-center">
                 <p class="ff_opensans fw-bold fs_8md lh_3xl text_gradient2 mb-0 ">1 year 82%</p> <span><img
                     src="./assets//images/svg/pink-arrow.svg" alt="rate-arrow" class="rate-arrow">
                 </span>
@@ -512,8 +512,8 @@
         </div>
         <div id="popup6" class="popup m-3">
           <div class=" z-3 bgpopup overflow-x-clip position-relative">
-            <div class="popup-topright-ellipse "></div>
-            <div class="popup-bottomleft-ellipse"></div>
+            <div class="popup-pink-topright-ellipse "></div>
+            <div class="popup-pink-bottomleft-ellipse"></div>
             <span class="close" id="closePopup6"><img src="./assets/images/svg/cross-btn.svg"
                 alt="popup-cross-btn"></span>
             <div class="row align-items-center justify-content-center">
@@ -589,7 +589,7 @@
             </div>
             <div class="right-pink-box"></div>
             <div class="stock_rate_right">
-              <div class=" blur_btn  gap-3 d-flex align-items-center">
+              <div class=" blur_pink_btn  gap-3 d-flex align-items-center">
                 <span><img src="./assets/images/svg/pink-arrow.svg" alt="rate-arrow" class="rate-arrow">
                 </span>
                 <p class="ff_opensans fw-bold fs_8md lh_3xl text_gradient2 mb-0 ">1 year 111%</p>
@@ -599,8 +599,8 @@
 
           <div id="popup7" class="popup">
             <div class=" z-3 bgpopup overflow-x-clip position-relative">
-              <div class="popup-topright-ellipse "></div>
-              <div class="popup-bottomleft-ellipse"></div>
+              <div class="popup-pink-topright-ellipse "></div>
+              <div class="popup-pink-bottomleft-ellipse"></div>
               <span class="close" id="closePopup7"><img src="./assets/images/svg/cross-btn.svg"
                   alt="popup-cross-btn"></span>
               <div class="row align-items-center justify-content-center">
