--- a/index3.html
+++ b/index3.html
@@ -607,7 +607,7 @@
     <!-- red theme road map  -->
     <section class="bg-black overflow-x-clip py-5 position-relative z-1">
         <div class="custom_container container px-4">
-            <h2 class="text-center pb-3 mb-md-3 ff_opensans fw-bold fs-8xl lh_7xl text-white">
+            <h2 class="text-center pb-3 mb-md-3 ff_opensans fw-bold fs_8xl lh_7xl text-white">
                 How <span class="how_it_work_gredient_text">it Works</span>
             </h2>
             <p class="text-center how_work_para_max_w fs_xs lh_md mb-sm-4 mb-3 ff_opensans c-gray mx-auto">
@@ -634,7 +634,7 @@
                             Fill out the Registration Form to Get Started.
                         </p>
                         <a href="#contact"
-                            class="text-white linear_bg_red max-p-10 open_ac main-button-2 fs_sm fw-bold ff_opensans d-inline-block">Open
+                            class="text-white linear_bg_red max-p-7 open_ac main-button-2 fs_sm fw-bold ff_opensans d-inline-block">Open
                             Your account</a>
                     </div>
                     <div class="position-absolute verifaction_max_w verification_position">
