--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <meta property="twitter:image" content="https://i.ibb.co/LzLxZsH/127-0-0-1-5500-index3-html.png" />
 </head>
 
-<body class="overflow_hidden body_bg_img">
+<body class="overflow_hidden body_bg_img firstpage">
     <!-- preloader -->
     <div id="preloder"
         class="min-vh-100 bg-black d-flex justify-content-center align-items-center  position-fixed top-0 start-0 w-100 z_15">
@@ -140,7 +140,7 @@
                             </div>
                         </div>
                         <div
-                            class="max-w-xl-388 max-w-654 w-100 px-lg-1 px-xl-0 position-relative mt_0 mt-md-40 mt_24   z-1 ">
+                            class="max-w-xl-388 max-w-654 w-100 px-lg-1 px-xl-0 position-relative mt_0 mt-md-40 mt-sm-32 mt_24   z-1 ">
                             <div class="gradient-border-mask3 box-email">
                                 <h2
                                     class=" text-white  text-center ff_opensans fw-semibold lh_2xl px-10 mb-sm-3 mb-2  fs_8md">
@@ -1459,60 +1459,61 @@
             </div>
         </div>
     </section>
-        <!-- red theme road map  -->
-        <section class="bg-black overflow-x-clip py-5 position-relative z-1">
-            <div class="custom_container container px-4">
-                <h2 class="text-center pb-3 mb-md-3  ff_opensans fw-bold fs-8xl lh_7xl text-white">
-                    How <span class="how_it_work_gredient_text-greenis">it Works</span>
-                </h2>
-                <p class="text-center how_work_para_max_w mb-sm-4 mb-3 ff_opensans fs_xs lh_md c-gray mx-auto">
-                    If you've used ChatGPT, the OpenAl chatbot that has wowed users by
-                    writing code and instantly answering complex questions, you've gotten
-                    a glimpse into the next frontier in artificial intelligence, as big
-                    tech companies are racing to develop the leading Al chatbot.
-                </p>
-                <p class="text-center how_work_para_max_w mb-sm-5 mb-4 pb-sm-2 ff_opensans fs_xs lh_md c-gray mx-auto">
-                     If you want to get portfolio exposure to Al companies but don't want
-                    to identify individual Al stocks, you can invest in an Al-focused
-                    exchange-traded fund (ETF). AI ETFs provide exposure to a broad range
-                    of the best Al companies, eliminating the need to research and choose
-                    individual stocks on your own.
-                </p>
-        
-                <div class="d-flex justify-content-center pt-sm-4 pt-2">
-                    <div class="position-relative d-inline-block">
-                        <img class="how_work_roadmap_img" src="./assets/images/webp/blueroadmap.webp" alt="roadmapimg_img" />
-                        <div class="position-absolute sign_up_position">
-                            <h3 class="fw-bold text-white ff_opensans mb-sm-2 mb-1 mt-2 mt-sm-0 fs_6lg lh-6xxl  ">Sign up
-                            </h3>
-                            <p class="c-gray mb-md-4 pb-md-2 mb-sm-3 mb-1 fw-normal ff_opensans fs_xs lh_md">
-                                Fill out the Registration Form to Get Started.
-                            </p>
-                            <a href="#contact"
-                                class="c-black-100  max-p-10 open_ac main-button fs_sm fw-bold ff_opensans d-inline-block">Open
-                                Your account</a>
-                        </div>
-                        <div class="position-absolute verifaction_max_w verification_position">
-                            <h3 class="fw-bold text-white ff_opensans mb-sm-2 mb-1 fs_6lg lh-6xxl ">Verification</h3>
-                            <p class="c-gray mb-0 fw-normal ff_opensans fs_xs lh_md">
-                                Schedule a Call with Our Verified AI Trading Mentors to Guide
-                                You Through Your Investment Journey
-                            </p>
-                        </div>
-                        <div class="position-absolute investing_position">
-                            <h3 class="fw-bold text-white ff_opensans mb-sm-2 mb-1 fs_6lg lh-6xxl ">
-                                Start Investing
-                            </h3>
-                            <p class="c-gray fw-normal ff_opensans fs_xs lh_md text_wrap mb-0">
-                                Begin shaping your financial future with confidence and ease.
-                            </p>
-                        </div>
+    <!-- green theme road map  -->
+    <section class="overflow-x-clip py-5 position-relative z-1">
+        <div class="custom_container container px-4">
+            <h2 class="text-center pb-3 mb-md-3  ff_opensans fw-bold fs_8xl lh_7xl text-white">
+                How <span class="how_it_work_gredient_text-greenis">it Works</span>
+            </h2>
+            <p class="text-center how_work_para_max_w mb-sm-4 mb-3 ff_opensans fs_xs lh_md c-gray mx-auto">
+                If you've used ChatGPT, the OpenAl chatbot that has wowed users by
+                writing code and instantly answering complex questions, you've gotten
+                a glimpse into the next frontier in artificial intelligence, as big
+                tech companies are racing to develop the leading Al chatbot.
+            </p>
+            <p class="text-center how_work_para_max_w mb-sm-5 mb-4 pb-sm-2 ff_opensans fs_xs lh_md c-gray mx-auto">
+                 If you want to get portfolio exposure to Al companies but don't want
+                to identify individual Al stocks, you can invest in an Al-focused
+                exchange-traded fund (ETF). AI ETFs provide exposure to a broad range
+                of the best Al companies, eliminating the need to research and choose
+                individual stocks on your own.
+            </p>
+
+            <div class="d-flex justify-content-center pt-sm-4 pt-2">
+                <div class="position-relative d-inline-block">
+                    <img class="how_work_roadmap_img" src="./assets/images/webp/blueroadmap.webp"
+                        alt="roadmapimg_img" />
+                    <div class="position-absolute sign_up_position">
+                        <h3 class="fw-bold text-white ff_opensans mb-sm-2 mb-1 mt-2 mt-sm-0 fs_6lg lh-6xxl  ">Sign up
+                        </h3>
+                        <p class="c-gray mb-md-4 pb-md-2 mb-sm-3 mb-1 fw-normal ff_opensans fs_xs lh_md">
+                            Fill out the Registration Form to Get Started.
+                        </p>
+                        <a href="#contact"
+                            class="c-black-100  max-p-7 open_ac main-button fs_sm fw-bold ff_opensans d-inline-block">Open
+                            Your account</a>
+                    </div>
+                    <div class="position-absolute verifaction_max_w verification_position">
+                        <h3 class="fw-bold text-white ff_opensans mb-sm-2 mb-1 fs_6lg lh-6xxl ">Verification</h3>
+                        <p class="c-gray mb-0 fw-normal ff_opensans fs_xs lh_md">
+                            Schedule a Call with Our Verified AI Trading Mentors to Guide
+                            You Through Your Investment Journey
+                        </p>
+                    </div>
+                    <div class="position-absolute investing_position">
+                        <h3 class="fw-bold text-white ff_opensans mb-sm-2 mb-1 fs_6lg lh-6xxl ">
+                            Start Investing
+                        </h3>
+                        <p class="c-gray fw-normal ff_opensans fs_xs lh_md text_wrap mb-0">
+                            Begin shaping your financial future with confidence and ease.
+                        </p>
                     </div>
                 </div>
             </div>
-            <div class="ellipes-road-map-green-left"></div>
-            <div class="ellipes-road-map-green-right"></div>
-        </section>
+        </div>
+        <div class="ellipes-road-map-green-left"></div>
+        <div class="ellipes-road-map-green-right"></div>
+    </section>
     <!--============Statistics-For-Today================ -->
     <section class="pt_Statistics position-relative z-1 mw_1920 overflow-x-clip">
         <div class="Statistics_ellips2 d-none d-md-block"></div>
