--- a/index3.html
+++ b/index3.html
@@ -605,7 +605,7 @@
         </div>
     </section>
     <!-- red theme road map  -->
-    <section class="bg-black overflow-x-clip py-5 position-relative z-1">
+    <section class="overflow-x-clip py-5 position-relative z-1">
         <div class="custom_container container px-4">
             <h2 class="text-center pb-3 mb-md-3 ff_opensans fw-bold fs_8xl lh_7xl text-white">
                 How <span class="how_it_work_gredient_text">it Works</span>
@@ -617,7 +617,7 @@
                 tech companies are racing to develop the leading Al chatbot.
             </p>
             <p class="text-center how_work_para_max_w fs_xs lh_md mb-sm-5 mb-4 pb-sm-2 ff_opensans c-gray mx-auto">
-                 If you want to get portfolio exposure to Al companies but don't want
+                If you want to get portfolio exposure to Al companies but don't want
                 to identify individual Al stocks, you can invest in an Al-focused
                 exchange-traded fund (ETF). AI ETFs provide exposure to a broad range
                 of the best Al companies, eliminating the need to research and choose
@@ -628,7 +628,7 @@
                 <div class="position-relative d-inline-block">
                     <img class="how_work_roadmap_img" src="./assets/images/webp/roadmapred.webp" alt="roadmapimg_img" />
                     <div class="position-absolute sign_up_position">
-                        <h3 class="fw-bold text-white ff_opensans mb-sm-2 mb-1 mt-2 mt-sm-0 fs_6lg lh-6xxl  ">Sign up
+                        <h3 class="fw-bold text-white ff_opensans mb-sm-2 mb-1 mt-2 mt-sm-0 fs_6lg lh-5xxl  ">Sign up
                         </h3>
                         <p class="c-gray mb-md-4 pb-md-2 mb-sm-3 mb-1 fw-normal ff_opensans fs_xs lh_md">
                             Fill out the Registration Form to Get Started.
@@ -638,14 +638,14 @@
                             Your account</a>
                     </div>
                     <div class="position-absolute verifaction_max_w verification_position">
-                        <h3 class="fw-bold text-white ff_opensans mb-sm-2 mb-1 fs_6lg lh-6xxl ">Verification</h3>
+                        <h3 class="fw-bold text-white ff_opensans mb-sm-2 mb-1 fs_6lg lh-5xxl ">Verification</h3>
                         <p class="c-gray mb-0 fw-normal ff_opensans fs_xs lh_md">
                             Schedule a Call with Our Verified AI Trading Mentors to Guide
                             You Through Your Investment Journey
                         </p>
                     </div>
                     <div class="position-absolute investing_position">
-                        <h3 class="fw-bold text-white ff_opensans mb-sm-2 mb-1 fs_6lg lh-6xxl ">
+                        <h3 class="fw-bold text-white ff_opensans mb-sm-2 mb-1 fs_6lg lh-5xxl ">
                             Start Investing
                         </h3>
                         <p class="c-gray fw-normal ff_opensans fs_xs lh_md text_wrap mb-0">
