--- a/index.html
+++ b/index.html
@@ -581,6 +581,76 @@
                 </div>
             </div>
         </section>
+        <!--==================Trade-long-section===================-->
+        <section class="pt-lg-5 pt-md-4 mt-5 overflow-x-clip">
+            <div class="custom_container container px-4 travel_section_padding pt-xl-5">
+                <div
+                    class="row align-items-center justify-content-md-between justify-content-center flex-wrap-reverse ai_blue">
+                    <div class="col-xl-7 col-md-6 mt-4 mt-md-0 trade_leverage_parent px-lg-0 pe-0 ps-md-2 ps-0">
+                        <h2 class="ff_open_sans fw-bold fs_8xl leading_124 mb-0 text-white text-md-start text-center">
+                            <span class="gradient_text">Trade long</span> and short with
+                            <span class="gradient_text"> leverage in CFDs </span>
+                        </h2>
+                        <p class="fw-normal fs-sm text-white opacity_07 pt-3 text-md-start text-center">
+                            Stocks, Forex, Indices and more
+                        </p>
+                        <div
+                            class="trade_shares d-flex flex-column justify-content-center align-items-center align-items-md-start gap-3 pt-3 mt-1 pb-md-4 trade_timeline mx-auto mx-md-0 position-relative">
+                            <div data-title="company"
+                                class="d-flex align-items-center gap-lg-5 gap-3 trade_line_first position-relative">
+                                <span onclick="changeImageHandler('company')"
+                                    class="trade_shares_btns trade_shares_active_btns leverage-tab d-flex align-items-center fw-bold cursior_pointer fs_md text-white ">
+                                    Choose your favorite asset
+                                </span>
+                                <span onclick="changeImageHandler('company')"
+                                    class="timeline_dot cursior_pointer rounded-pill active_timeline_dot duration_300"></span>
+                            </div>
+                            <div data-title="invest"
+                                class="d-flex align-items-center gap-lg-5 gap-3 trade_line_4th position-relative">
+                                <span onclick="changeImageHandler('invest')"
+                                    class="trade_shares_btns leverage-tab d-flex align-items-center fw-bold cursior_pointer fs_md text-white ">
+                                    Select how much to invest
+                                </span>
+                                <span onclick="changeImageHandler('invest')"
+                                    class="timeline_dot cursior_pointer rounded-pill duration_300"></span>
+                            </div>
+                            <div data-title="shares" class="d-flex align-items-center gap-lg-5 gap-3">
+                                <span onclick="changeImageHandler('shares')"
+                                    class="trade_shares_btns leverage-tab d-flex align-items-center fw-bold cursior_pointer fs_md text-white ">
+                                    Get your shares in seconds
+                                </span>
+                                <span onclick="changeImageHandler('shares')"
+                                    class="timeline_dot cursior_pointer rounded-pill duration_300"></span>
+                            </div>
+                        </div>
+                        <a href="#contact"
+                            class="text-black linear_bg main-button fs_xs fw-bold ff_open_sans mt-md-2 d-md-inline-block d-none">Open
+                            Your account</a>
+                    </div>
+                    <div class="col-lg-5 col-md-6 col-sm-8 px-lg-2 position-relative travel_phone_image">
+                        <lottie-player id="company" src="./assets/json/phone-1.json" speed=".55"
+                            class="position-relative z-2 mx-auto w-100 px-4 h-auto px-md-5 mb-3 mb-md-0"
+                            autoplay></lottie-player>
+                        <lottie-player id="invest" src="./assets/json/phone-2.json" speed=".4"
+                            class="position-relative d_none z-2 mx-auto w-100 px-4 h-auto px-md-5 mb-3 mb-md-0"
+                            autoplay>
+                        </lottie-player>
+                        </lottie-player>
+                        <lottie-player id="shares" src="./assets/json/phone-3.json" speed=".28"
+                            class="position-relative d_none z-2 mx-auto w-100 px-4 h-auto px-md-5 mb-3 mb-md-0"
+                            autoplay>
+                        </lottie-player>
+
+                        <div class="phone_bubble linear_bg position-absolute top-50 start-50 translate-middle z-0">
+                        </div>
+                        <a href="#contact"
+                            class="text-black text-center main-button linear_bg fs_xs fw-bold ff_open_sans mt-4 d-block w-100 d-md-none">
+                            Open Your account
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!--============================top-section============================= -->
         <section class="position-relative z-3 me_1920 overflow-x-clip pt-md--5 pt-sm-3 mt-5 overflow-x-clip ">
             <div class="nividia-topellipse d-lg-block d-none"></div>
@@ -1391,77 +1461,9 @@
     </div>
     </div>
     </section>
-    <!--==================Trade-long-section===================-->
-    <section class="pt-lg-5 pt-md-4 mt-5 overflow-x-clip">
-        <div class="custom_container container px-4 travel_section_padding pt-xl-5">
-            <div
-                class="row align-items-center justify-content-md-between justify-content-center flex-wrap-reverse ai_blue">
-                <div class="col-xl-7 col-md-6 mt-4 mt-md-0 trade_leverage_parent px-lg-0 pe-0 ps-md-2 ps-0">
-                    <h2 class="ff_open_sans fw-bold fs_8xl leading_124 mb-0 text-white text-md-start text-center">
-                        <span class="gradient_text">Trade long</span> and short with
-                        <span class="gradient_text"> leverage in CFDs </span>
-                    </h2>
-                    <p class="fw-normal fs-sm text-white opacity_07 pt-3 text-md-start text-center">
-                        Stocks, Forex, Indices and more
-                    </p>
-                    <div
-                        class="trade_shares d-flex flex-column justify-content-center align-items-center align-items-md-start gap-3 pt-3 mt-1 pb-md-4 trade_timeline position-relative">
-                        <div data-title="company"
-                            class="d-flex align-items-center gap-lg-5 gap-3 trade_line_first position-relative">
-                            <span onclick="changeImageHandler('company')"
-                                class="trade_shares_btns trade_shares_active_btns leverage-tab d-flex align-items-center fw-bold cursior_pointer fs_md text-white ">
-                                Choose your favorite asset
-                            </span>
-                            <span onclick="changeImageHandler('company')"
-                                class="timeline_dot cursior_pointer rounded-pill active_timeline_dot duration_300"></span>
-                        </div>
-                        <div data-title="invest"
-                            class="d-flex align-items-center gap-lg-5 gap-3 trade_line_4th position-relative">
-                            <span onclick="changeImageHandler('invest')"
-                                class="trade_shares_btns leverage-tab d-flex align-items-center fw-bold cursior_pointer fs_md text-white ">
-                                Select how much to invest
-                            </span>
-                            <span onclick="changeImageHandler('invest')"
-                                class="timeline_dot cursior_pointer rounded-pill duration_300"></span>
-                        </div>
-                        <div data-title="shares" class="d-flex align-items-center gap-lg-5 gap-3">
-                            <span onclick="changeImageHandler('shares')"
-                                class="trade_shares_btns leverage-tab d-flex align-items-center fw-bold cursior_pointer fs_md text-white ">
-                                Get your shares in seconds
-                            </span>
-                            <span onclick="changeImageHandler('shares')"
-                                class="timeline_dot cursior_pointer rounded-pill duration_300"></span>
-                        </div>
-                    </div>
-                    <a href="#contact"
-                        class="text-black linear_bg open_account_button fs_xs fw-bold ff_open_sans mt-md-2 d-md-inline-block d-none">Open
-                        Your account</a>
-                </div>
-                <div class="col-lg-5 col-md-6 col-sm-8 px-lg-2 position-relative travel_phone_image">
-                    <lottie-player id="company" src="./assets/json/phone-1.json" speed=".55"
-                        class="position-relative z-2 mx-auto w-100 px-4 h-auto px-md-5 mb-3 mb-md-0"
-                        autoplay></lottie-player>
-                    <lottie-player id="invest" src="./assets/json/phone-2.json" speed=".4"
-                        class="position-relative d_none z-2 mx-auto w-100 px-4 h-auto px-md-5 mb-3 mb-md-0" autoplay>
-                    </lottie-player>
-                    </lottie-player>
-                    <lottie-player id="shares" src="./assets/json/phone-3.json" speed=".28"
-                        class="position-relative d_none z-2 mx-auto w-100 px-4 h-auto px-md-5 mb-3 mb-md-0" autoplay>
-                    </lottie-player>
-
-                    <div class="phone_bubble linear_bg position-absolute top-50 start-50 translate-middle z-0">
-                    </div>
-                    <a href="#contact"
-                        class="text-black text-center open_account_button linear_bg fs_xs fw-bold ff_open_sans mt-4 d-block w-100 d-md-none">
-                        Open Your account
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
     <!-- green theme road map  -->
-    <section class="overflow-x-clip py-5 position-relative z-1">
-        <div class="custom_container container px-4">
+    <section class="overflow-x-clip pt-lg-5 pt-sm-3 mt-5 position-relative z-1">
+        <div class="custom_container container px-4 mt-xl-5">
             <h2 class="text-center pb-3 mb-md-3  ff_opensans fw-bold fs_8xl lh_7xl text-white">
                 How <span class="how_it_work_gredient_text-greenis">it Works</span>
             </h2>
