--- a/index3.html
+++ b/index3.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/style3.css">
-<link rel="shortcut icon" href="./assets/images/png/favicon-2.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/images/png/favicon-2.png" type="image/x-icon">
     <!--================bootstrap-link=================== -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -420,7 +421,7 @@
                         Stocks, Forex, Indices and more
                     </p>
                     <div
-                        class="trade_shares d-flex flex-column justify-content-center align-items-center align-items-md-start gap-3 pt-3 mt-1 pb-4 trade_timeline position-relative">
+                        class="trade_shares d-flex flex-column justify-content-center align-items-center align-items-md-start gap-3 pt-3 mt-1 pb-4 trade_timeline mx-auto mx-md-0 position-relative">
                         <div data-title="company"
                             class="d-flex align-items-center gap-lg-5 gap-3 trade_line_3rd position-relative">
                             <span onclick="changeImageHandler('company')"
@@ -605,8 +606,8 @@
         </div>
     </section>
     <!-- red theme road map  -->
-    <section class="overflow-x-clip py-5 position-relative z-1">
-        <div class="custom_container container px-4">
+    <section class="overflow-x-clip pt-lg-5 pt-sm-3 mt-5 position-relative z-1">
+        <div class="custom_container container px-4 mt-xl-5">
             <h2 class="text-center pb-3 mb-md-3 ff_opensans fw-bold fs_8xl lh_7xl text-white">
                 How <span class="how_it_work_gredient_text">it Works</span>
             </h2>
@@ -623,7 +624,7 @@
                 of the best Al companies, eliminating the need to research and choose
                 individual stocks on your own.
             </p>
-    
+
             <div class="d-flex justify-content-center pt-sm-4 pt-2">
                 <div class="position-relative d-inline-block">
                     <img class="how_work_roadmap_img" src="./assets/images/webp/roadmapred.webp" alt="roadmapimg_img" />
