--- a/index3.html
+++ b/index3.html
@@ -14,6 +14,14 @@
 </head>
 
 <body class="body_bg_img2 overflow-x-hidden">
+    <!-- preloader -->
+    <div id="preloderred"
+        class="min-vh-100 bg-black d-flex justify-content-center align-items-center  position-fixed top-0 start-0 w-100 z_15">
+        <div class="preloder text-white fs_2xl flex-column d-flex">
+            <P class="fs_xl ff_opensans fw-bold text-white">Ai-<span class="text_white">Stocks</span></P>
+            <div class="ciclre mx-auto"></div>
+        </div>
+    </div>
     <!-- header -->
     <header class=" bg-hero-img-2 mw_1920 position-relative overflow-x-clip  z-1">
         <nav class="backdrop-20 py-12 nav-background position-relative  z-1">
